# codexium

./: .gitignore  README.md  justfile
codex-rs/: Cargo.toml
codex-rs/analytics/src/: reducer.rs
codex-rs/app-server-test-client/: README.md
codex-rs/app-server-test-client/src/: lib.rs
codex-rs/cli/: BUILD.bazel  Cargo.toml
codex-rs/cli/src/: main.rs  provider_picker.rs  provider_picker_tests.rs  providers_cmd.rs  providers_cmd_tests.rs
codex-rs/codex-api/src/: lib.rs
codex-rs/collaboration-mode-templates/src/: lib.rs
codex-rs/collaboration-mode-templates/templates/: compose.md
codex-rs/config/src/: config_toml.rs  mcp_types.rs
codex-rs/core-skills/src/: compose.rs  lib.rs  loader.rs  loader_tests.rs  manager.rs  render.rs  render_compose_tests.rs
codex-rs/docs/: bazel.md
codex-rs/model-provider/: Cargo.toml
codex-rs/model-provider-info/src/: lib.rs
codex-rs/model-provider/src/: auth.rs  lib.rs  models_endpoint.rs  provider.rs
codex-rs/models-manager/: Cargo.toml
codex-rs/models-manager/src/: collaboration_mode_presets.rs  collaboration_mode_presets_tests.rs  lib.rs  manager.rs  provider_catalog_manager.rs
codex-rs/rmcp-client/: BUILD.bazel
codex-rs/wire-bridge/: BUILD.bazel  Cargo.toml
codex-rs/wire-bridge/src/: common.rs  error.rs  history.rs  json_canonical.rs  lib.rs  model_helpers.rs  sse.rs  streaming.rs  transform.rs
scripts/: debug-codex.sh  run_tui_with_exec_server.sh  start-codex-exec.sh  test-remote-env.sh
scripts/codex_package/: README.md  targets.py  test_cargo.py
scripts/install/: install.ps1  install.sh  local.sh
(+61 files in other folders)
